# python-template

./: .env.example  .pre-commit-config.yaml  Makefile  Readme.md  mypy.ini  pyproject.toml  requirements-dev.txt
src/: logger_config.yaml  main.py  sub.py
src/common/: configs.py
tests/: conftest.py
tests/sub/: conftest.py  test_sub.py
